feat: add DSG in and out times processor